--- a/PROJECTS/Docker/ansible.cfg
+++ b/PROJECTS/Docker/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = False
-remote_user = ubuntu
-private_key_file = ~/.ssh/disposible-sshkey
+remote_user = princewillopah
+private_key_file = ~/.ssh/id_rsa
 inventory = inventory/hosts
