--- a/server-installations-configuration/ansible-configuration-2.yml
+++ b/server-installations-configuration/ansible-configuration-2.yml
@@ -202,9 +202,11 @@
 
     # Add alias to .bashrc
     - name: Add alias to bashrc
+      become: yes
       lineinfile:
-        dest: "/home/ubuntu/.bashrc"
+        path: "/home/ubuntu/.bashrc"
         line: 'alias cl="clear"'
-      owner: ubuntu
-      group: ubuntu
-      mode: '0644'
+        create: yes
+        owner: ubuntu
+        group: ubuntu
+        mode: '0644'
